# rebocap-osc-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: quest-standalone-guide.md
rebocap_osc_bridge/: __init__.py  bridge.py  config.py  gui.py  openvr_bridge.py  oscquery.py  vmc.py
tests/: test_bridge.py  test_openvr_bridge.py
