[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebocap-osc-bridge"
version = "0.4.0"
description = "Experimental Rebocap SDK v2 to VRChat OSC bridge with approximate FK"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }
keywords = ["rebocap", "vrchat", "osc", "full-body-tracking", "vr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "python-osc>=1.8",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "tomli>=2.0; python_version < '3.11'",
]
openvr = [
    "openvr>=2.12",
]

[project.scripts]
rebocap-osc-bridge = "rebocap_osc_bridge.bridge:main"
rebocap-openvr-osc-bridge = "rebocap_osc_bridge.openvr_bridge:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rebocap_osc_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
